--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Ad network application admin panel",
   "author": "RK Web Technology",
   "homepage": ".",
+  "proxy":"http://localhost:80",
   "copyright": "Copyright 2019 RK Web Technology",
   "license": "MIT",
   "private": true,
