--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "CoreUI-React",
-  "name": "CoreUI-React sample",
+  "short_name": "ad_network",
+  "name": "Ad Monetisation Network",
   "icons": [
     {
       "src": "./assets/img/favicon.png",
