--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.0",
   "description": "Ad network application admin panel",
   "author": "RK Web Technology",
-  "homepage": ".",
-  "proxy":"http://localhost:80",
+  "homepage": "https://dixitsavaliya.github.io/ad_network_admin",
   "copyright": "Copyright 2019 RK Web Technology",
   "license": "MIT",
   "private": true,
-  
   "dependencies": {
     "@coreui/coreui": "^2.1.16",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
@@ -23,6 +21,7 @@
     "enzyme-adapter-react-16": "^1.15.1",
     "flag-icon-css": "^3.4.5",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^2.1.1",
     "history": "^4.10.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -47,9 +46,10 @@
     "test": "react-scripts test",
     "test:cov": "npm test -- --coverage --watchAll=false",
     "test:debug": "react-scripts --inspect-brk test --runInBand",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
-  
   "eslintConfig": {
     "extends": "react-app"
   },
