--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Ad network application admin panel",
   "author": "RK Web Technology",
-  "homepage": "https://dixitsavaliya.github.io/ad_network_admin/",
+  "homepage": "https://dixitsavaliya.github.io/ad_network_admin",
   "copyright": "Copyright 2019 RK Web Technology",
   "license": "MIT",
   "private": true,
